<resources>
    <string name="app_name">ONECASH</string>
    <string name="a1">login</string>
    <string name="a2"> 请输入手机号码 </string>
    <string name="a3"> 请输入验证码 </string>
    <string name="a4"> 获取验证码 </string>
    <string name="a5"> 登录 </string>
    <string name="a6"> 点击登录即代表您同意服务和隐私政策 </string>
    <string name="a7"> 请耐心等候 </string>
    <string name="a8"> 登录成功 </string>
    <string name="a9"> LOAN </string>
    <string name="a10"> A convenient and quick money bag </string>
    <string name="a11"> 您有一笔借款哦 </string>
    <string name="a12"> 上传紧急联系人 </string>
    <string name="a13"> 退出登录 </string>
    <string name="a14"> 退出成功 </string>
    <string name="a15"> 联系客服 </string>
    <string name="a16"> 完善信息\n最高可借999999999 </string>
    <string name="a17"> 信贷产品 </string>
    <string name="a18"> 自定义组合 </string>
    <string name="a19"> 个人信息 </string>
    <string name="a20"> 我的借款 </string>
    <string name="a21"> 遇到了什么问题?\n点击下面的“拨打电话”去咨询吧 </string>
    <string name="a22"> 拨打客服电话 </string>
    <string name="a23"> 去还款>> </string>
    <string name="a24"> 到底了 </string>
    <string name="a25"> 姓名: </string>
    <string name="a26"> 年龄: </string>
    <string name="a27"> 电话号码: </string>
    <string name="a28"> 银行名称: </string>
    <string name="a29"> 银行卡号: </string>
    <string name="a30"> 线下还款 </string>
    <string name="a31"> 线上还款 </string>
    <string name="a32"> 拍摄视频 </string>
    <string name="a33"> 基本信息 </string>
    <string name="a34"> 联系人 </string>
    <string name="a35"> 工作信息 </string>
    <string name="a36"> 银行信息 </string>
    <string name="a37"> 借款申请已提交，请耐心等候。 </string>
    <string name="a38"> 申请金额 </string>
    <string name="a39"> 还款期限 </string>
    <string name="a40"> 利息 </string>
    <string name="a41"> 服务费 </string>
    <string name="a42"> 应还金额 </string>
    <string name="a43"> 去还款 </string>
    <string name="a44"> 回首页 </string>
    <string name="a45"> 详情 </string>
    <string name="a46"> 确定 </string>
    <string name="a47"> 取消 </string>
    <string name="a48"> 银行编码： </string>
    <string name="a49"> 银行分行名称： </string>
    <string name="a50"> 请输入银行卡号 </string>
    <string name="a51"> 请输入银行编码 </string>
    <string name="a52"> 请输入银行名称 </string>
    <string name="a53"> 请输入银行分行名称 </string>
    <string name="a54"> 提交 </string>
    <string name="a55"> 银行账号： </string>
    <string name="a56"> 请上传转账详情图片，以供核实。 </string>
    <string name="a57"> 金额： </string>
    <string name="a58"> 请输入要还的金额 </string>
    <string name="a59"> 请输入姓名 </string>
    <string name="a60"> 身份证： </string>
    <string name="a61"> 请输入身份证号码 </string>
    <string name="a62"> 地址： </string>
    <string name="a63"> 请输入居住地址 </string>
    <string name="a64"> 生日： </string>
    <string name="a65"> 选择日期 </string>
    <string name="a66"> 邮箱： </string>
    <string name="a67"> 请输入邮箱 </string>
    <string name="a68"> Facebook： </string>
    <string name="a69"> 请输入Facebook账号 </string>
    <string name="a70"> 请上传身份证正面 </string>
    <string name="a71"> 请上传身份证背面 </string>
    <string name="a72"> 手持身份证拍照 </string>
    <string name="a73"> 第一位联系人 </string>
    <string name="a74"> 电话： </string>
    <string name="a75"> 请输入电话号码 </string>
    <string name="a76"> 关系： </string>
    <string name="a77"> 您和他的关系 </string>
    <string name="a78"> 第二位联系人 </string>
    <string name="a79"> 公司名称： </string>
    <string name="a80"> 请输入公司名称 </string>
    <string name="a81"> 公司电话： </string>
    <string name="a82"> 请输入公司电话 </string>
    <string name="a83"> 公司地址： </string>
    <string name="a84"> 请输入公司地址 </string>
    <string name="a85"> 职位： </string>
    <string name="a86"> 请输入职位 </string>
    <string name="a87"> 薪资范围： </string>
    <string name="a88"> 请输入薪资范围 </string>
    <string name="a89"> 入职时间： </string>
    <string name="a90"> 请输入入职时间 </string>
    <string name="a91"> 行业类型： </string>
    <string name="a92"> 请输入行业类型 </string>
    <string name="a93"> 请上传工作证正面 </string>
    <string name="a94"> 请上传工作证背面 </string>
    <string name="a95"> 手持工作证拍照 </string>
    <string name="a96"> 请您确认借款 </string>
    <string name="a97"> 审核中 </string>
    <string name="a98"> 借款成功 </string>
    <string name="a99"> 待还订单 </string>
    <string name="a100"> 借款申请已提交，请耐心等候。 </string>
    <string name="a101"> 还款 </string>
    <string name="a102"> 视频凭证 </string>
    <string name="a103"> 上传成功 </string>
    <string name="a104"> 完善信息 </string>
    <string name="a105"> 内容不能为空 </string>
    <string name="a106"> 请上传还款凭证 </string>
    <string name="a107"> 恭喜您，还款成功 </string>
    <string name="a108"> 拍照权限被拒绝 </string>
    <string name="a109"> 请填写要还的金额 </string>
    <string name="a110"> 请按顺序拍照 </string>
    <string name="a111"> 身份信息未完善！ </string>
    <string name="a112"> 工作信息未完善！ </string>
    <string name="a113"> 借款金额 </string>
    <string name="a114"> 性别 </string>
    <string name="a115"> 婚姻状况 </string>
    <string name="a116"> 教育状况 </string>
    <string name="a117"> Pan卡 </string>
    <string name="a118"> Pan卡主人 </string>
    <string name="a119"> Pan卡主人父亲 </string>
    <string name="a120"> 请输入Pan卡号码 </string>
    <string name="a121"> 请输入Pan卡主人 </string>
    <string name="a122"> 请输入Pan卡主人父亲 </string>
    <string name="a123"> 我有工作 </string>
    <string name="a124"> 我没有工作 </string>
    <string name="a125"> 跳过 </string>
    <string name="a126">  </string>
    <string name="a127">  </string>
    <string name="a128">  </string>
    <string name="a129">  </string>
    <string name="a130">  </string>
    <string name="a131">  </string>
    <string name="a132">  </string>
    <string name="a133">  </string>
    <string name="a134">  </string>
    <string name="a135">  </string>
    <string name="a136">  </string>
    <string name="a137">  </string>
    <string name="a138">  </string>
    <string name="a139">  </string>
    <string name="a140">  </string>
    <string name="a141">  </string>
    <string name="a142">  </string>
    <string name="a143">  </string>
    <string name="a144">  </string>
    <string name="a145">  </string>
    <string name="a146">  </string>
    <string name="a147">  </string>
    <string name="a148">  </string>
    <string name="a149">  </string>
    <string name="a150">  </string>
    <string name="a151">  </string>
    <string name="a152">  </string>
    <string name="a153">  </string>
    <string name="a154">  </string>
    <string name="a155">  </string>
    <string name="a156">  </string>
    <string name="a157">  </string>
    <string name="a158">  </string>
    <string name="a159">  </string>
    <string name="a160">  </string>
    <string name="a161">  </string>
    <string name="a162">  </string>
    <string name="a163">  </string>
    <string name="a164">  </string>
    <string name="a165">  </string>
    <string name="a166">  </string>
    <string name="a167">  </string>
    <string name="a168">  </string>
    <string name="a169">  </string>
    <string name="a170">  </string>
    <string name="a171">  </string>
    <string name="a172">  </string>
    <string name="a173">  </string>
    <string name="a174">  </string>
    <string name="a175">  </string>
    <string name="a176">  </string>
    <string name="a177">  </string>
    <string name="a178">  </string>
    <string name="a179">  </string>
    <string name="a180">  </string>
    <string name="a181">  </string>
    <string name="a182">  </string>
    <string name="a183">  </string>
    <string name="a184">  </string>
    <string name="a185">  </string>
    <string name="a186">  </string>
    <string name="a187">  </string>
    <string name="a188">  </string>
    <string name="a189">  </string>
    <string name="a190">  </string>
    <string name="a191">  </string>
    <string name="a192">  </string>
    <string name="a193">  </string>
    <string name="a194">  </string>
    <string name="a195">  </string>
    <string name="a196">  </string>
    <string name="a197">  </string>
    <string name="a198">  </string>
    <string name="a199">  </string>
    <string name="a200">  </string>
    <string name="a201">  </string>
    <string name="a202">  </string>
    <string name="a203">  </string>
    <string name="a204">  </string>
    <string name="a205">  </string>
    <string name="a206">  </string>
    <string name="a207">  </string>
    <string name="a208">  </string>
    <string name="a209">  </string>
    <string name="a210">  </string>
    <string name="a211">  </string>
    <string name="a212">  </string>
    <string name="a213">  </string>
    <string name="a214">  </string>
    <string name="a215">  </string>
    <string name="a216">  </string>
    <string name="a217">  </string>
    <string name="a218">  </string>
    <string name="a219">  </string>
    <string name="a220">  </string>
    <string name="a221">  </string>
    <string name="a222">  </string>
    <string name="a223">  </string>
    <string name="a224">  </string>
    <string name="a225">  </string>
    <string name="a226">  </string>
    <string name="a227">  </string>
    <string name="a228">  </string>
    <string name="a229">  </string>
    <string name="a230">  </string>
    <string name="a231">  </string>
    <string name="a232">  </string>
    <string name="a233">  </string>
    <string name="a234">  </string>
    <string name="a235">  </string>
    <string name="a236">  </string>
    <string name="a237">  </string>
    <string name="a238">  </string>
    <string name="a239">  </string>
    <string name="a240">  </string>
    <string name="a241">  </string>
    <string name="a242">  </string>
    <string name="a243">  </string>
    <string name="a244">  </string>
    <string name="a245">  </string>
    <string name="a246">  </string>
    <string name="a247">  </string>
    <string name="a248">  </string>
    <string name="a249">  </string>
    <string name="a250">  </string>
    <string name="a251">  </string>
    <string name="a252">  </string>
    <string name="a253">  </string>
    <string name="a254">  </string>
    <string name="a255">  </string>
    <string name="a256">  </string>
    <string name="a257">  </string>
    <string name="a258">  </string>
    <string name="a259">  </string>
    <string name="a260">  </string>
    <string name="a261">  </string>
    <string name="a262">  </string>
    <string name="a263">  </string>
    <string name="a264">  </string>
    <string name="a265">  </string>
    <string name="a266">  </string>
    <string name="a267">  </string>
    <string name="a268">  </string>
    <string name="a269">  </string>
    <string name="a270">  </string>
    <string name="a271">  </string>
    <string name="a272">  </string>
    <string name="a273">  </string>
    <string name="a274">  </string>
    <string name="a275">  </string>
    <string name="a276">  </string>
    <string name="a277">  </string>
    <string name="a278">  </string>
    <string name="a279">  </string>
    <string name="a280">  </string>
    <string name="a281">  </string>
    <string name="a282">  </string>
    <string name="a283">  </string>
    <string name="a284">  </string>
    <string name="a285">  </string>
    <string name="a286">  </string>
    <string name="a287">  </string>
    <string name="a288">  </string>
    <string name="a289">  </string>
    <string name="a290">  </string>
    <string name="a291">  </string>
    <string name="a292">  </string>
    <string name="a293">  </string>
    <string name="a294">  </string>
    <string name="a295">  </string>
    <string name="a296">  </string>
    <string name="a297">  </string>
    <string name="a298">  </string>
    <string name="a299">  </string>
    <string name="a300">  </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>