<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.BankFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--        //    姓名
            private String userName;

            private String userId;
            //    银行卡号
            private String userCardId;
            //    银行编码
            private String bankbs;
            //
            private String cipher;
            //    银行名称
            private String bankName;
            //    银行支行
            private String branchName;-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/a25"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/a29"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/bankcardnumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/a50"
                android:textColor="@color/text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/a48"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/bankcoding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/a51"
                android:textColor="@color/text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/a28"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/bankname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/a52"
                android:textColor="@color/text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/a49"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/bankbranch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/a53"
                android:textColor="@color/text"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_shape"
            android:text="@string/a54"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>