<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shap_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_IDInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/a19"
        android:textColor="@color/text"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tv_MyLoan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/a20"
        android:textColor="@color/text"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tv_Emergency_Contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/a15"
        android:textColor="@color/text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_Edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/a13"
        android:textColor="@color/text"
        android:textSize="18sp" />
</LinearLayout>