<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.WorkFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/inputnumber"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_offline"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/a123"
                android:textColor="@color/a0001"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_on_line"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/a124"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a79"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/workName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a80"
                    android:textColor="@color/text"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a81"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a82"
                    android:textColor="@color/text"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a83"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a84"
                    android:textColor="@color/text"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a85"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/position"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a86"
                    android:textColor="@color/text"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a87"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <Spinner
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/spingarr"
                    android:textColor="@color/text"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a89"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/tv_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/a90"
                    android:textColor="@color/text"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="@string/a91"
                    android:textColor="@color/text"
                    android:textSize="13sp" />

                <Spinner
                    android:id="@+id/sp_worktype"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/employmentType"
                    android:textColor="@color/text"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/a93"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <View
                    android:id="@+id/view_workcardFront"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_camera" />

                <ImageView
                    android:id="@+id/iv_workcardFront"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/a94"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <View
                    android:id="@+id/view_wordcardOpposite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_camera" />

                <ImageView
                    android:id="@+id/iv_workcardOpposite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/a95"
                android:textColor="@color/text"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <View
                    android:id="@+id/view_workcardTake"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_camera" />

                <ImageView
                    android:id="@+id/iv_workcardTake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/a54"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_jump_over"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_shape"
            android:text="@string/a125"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>